# d-spy

./: .gitignore  .gitlab-ci.yml  COPYING  NEWS  README.md  d-spy.doap  meson.build  meson_options.txt  org.gnome.dspy.devel.json  org.gnome.dspy.json
data/: meson.build  org.gnome.dspy.appdata.xml.in  org.gnome.dspy.appdata.xml.in.in  org.gnome.dspy.desktop.in.in  org.gnome.dspy.gschema.xml  org.gnome.dspy.metainfo.xml.in.in  org.gnome.dspy.service.in
data/icons/hicolor/: meson.build
lib/: dspy-binding-group.c  dspy-connection-button.c  dspy-connection-button.h  dspy-connection.c  dspy-connection.h  dspy-empty-state.c  dspy-empty-state.h  dspy-empty-state.ui  dspy-introspection-model.c  dspy-introspection-model.h  dspy-list-model-filter.c  dspy-list-model-filter.h  dspy-method-invocation.c  dspy-method-invocation.h  dspy-method-view.c  dspy-method-view.h  dspy-method-view.ui  dspy-multi-paned.c  dspy-multi-paned.h  dspy-name-marquee.c  dspy-name-marquee.h  dspy-name-marquee.ui  dspy-name-row.c  dspy-name-row.h  dspy-name-row.ui  dspy-name.c  dspy-name.h  dspy-names-model.c  dspy-names-model.h  dspy-node.c  dspy-pattern-spec.c  dspy-pattern-spec.h  dspy-private.h  dspy-signature.c  dspy-simple-popover.c  dspy-simple-popover.ui  dspy-tree-view.c  dspy-tree-view.h  dspy-version-macros.h  dspy-version.h.in  (+7 more)
lib/gtk/: menus.ui
lib/themes/: shared.css
po/: LINGUAS  POTFILES  POTFILES.in  az.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hi.po  hu.po  ia.po  id.po  it.po  ja.po  ka.po  kab.po  kk.po  ko.po  kw.po  lo.po  lt.po  lv.po  meson.build  nb.po  ne.po  nl.po  oc.po  (+17 more)
src/: build-ident.h.in  dspy-argument.c  dspy-argument.h  dspy-binding-group.c  dspy-binding-group.h  dspy-connection-button.c  dspy-connection-button.h  dspy-connection.c  dspy-connection.h  dspy-future-list-model.c  dspy-future-list-model.h  dspy-interface.c  dspy-introspectable-row.c  dspy-introspectable-row.h  dspy-introspectable-row.ui  dspy-introspectable.c  dspy-introspectable.h  dspy-introspection-model.c  dspy-introspection-model.h  dspy-introspection.c  dspy-introspection.h  dspy-list-model-filter.c  dspy-method-argument.c  dspy-method-argument.h  dspy-method-invocation.c  dspy-method-view.c  dspy-method-view.h  dspy-method-view.ui  dspy-method.c  dspy-method.h  dspy-name-marquee.c  dspy-name-marquee.h  dspy-name-marquee.ui  dspy-name-row.c  dspy-name-row.h  dspy-name-row.ui  dspy-name.c  dspy-name.h  dspy-names-model.c  dspy-names-model.h  (+26 more)
src/gtk/: menus.ui
src/introspection/: dspy-argument.c  dspy-argument.h  dspy-interface.c  dspy-interface.h  dspy-introspectable.c  dspy-introspectable.h  dspy-introspection.c  dspy-method.c  dspy-node.c  dspy-node.h  dspy-property.c  dspy-property.h  dspy-signal.c  dspy-titled-model.c  dspy-types.h  meson.build
src/themes/: shared.css
subprojects/: libdex.wrap
