dspy_sources += files([
  'dspy-argument.c',
  'dspy-interface.c',
  'dspy-introspectable.c',
  'dspy-introspection.c',
  'dspy-method.c',
  'dspy-node.c',
  'dspy-property.c',
  'dspy-signal.c',
  'dspy-titled-model.c',
])

dspy_deps += [
  dependency('libdex-1'),
]

dspy_include_directories += [
  include_directories('.'),
]
